Update to use get(0) and remove(0), fixed EOF error