@@ -13,24 +13,24 @@ public class Else implements JottTree{
 
     static Else parseElse(ArrayList<Token> tokens) throws SyntaxException {
         if (tokens.isEmpty()) {
-            throw new SyntaxException("Unexpected eof");
+            throw new SyntaxException("Unexpected EOF", "", -1);
         }
-        Token currToken = tokens.getFirst();
+        Token currToken = tokens.get(0);
         if(!(currToken.getTokenType() == TokenType.ID_KEYWORD && currToken.getToken().equals("Else"))) {
             return new Else(null);
         }
-        tokens.removeFirst();
-        currToken = tokens.getFirst();
+        tokens.remove(0);
+        currToken = tokens.get(0);
         if(!(currToken.getTokenType() == TokenType.L_BRACE && currToken.getToken().equals("{"))) {
             throw new SyntaxException("Expected left brace", currToken.getFilename(), currToken.getLineNum());
         }
-        tokens.removeFirst();
+        tokens.remove(0);
         Body bodyNode = Body.parseBody(tokens);
-        currToken = tokens.getFirst();
+        currToken = tokens.get(0);
         if(!(currToken.getTokenType() == TokenType.R_BRACE && currToken.getToken().equals("}"))) {
             throw new SyntaxException("Expected right brace", currToken.getFilename(), currToken.getLineNum());
         }
-        tokens.removeFirst();
+        tokens.remove(0);
         return new Else(bodyNode);
     }
 
