@@ -15,30 +15,30 @@ public class FuncCall implements JottTree{
 
     static FuncCall parseFuncCall(ArrayList<Token> tokens) throws SyntaxException {
         if (tokens.isEmpty()) {
-            throw new SyntaxException("Unexpected eof");
+            throw new SyntaxException("Unexpected EOF", "", -1);
         }
-        Token currToken = tokens.getFirst();
+        Token currToken = tokens.get(0);
         if (currToken.getTokenType() != TokenType.COLON) {
             throw new SyntaxException("Should be a colon", currToken.getFilename(), currToken.getLineNum());
         }
-        tokens.removeFirst();
-        currToken = tokens.getFirst();
+        tokens.remove(0);
+        currToken = tokens.get(0);
         if (currToken.getTokenType() != TokenType.COLON) {
             throw new SyntaxException("Should be a colon", currToken.getFilename(), currToken.getLineNum());
         }
-        tokens.removeFirst();
+        tokens.remove(0);
         Id idNode = Id.parseIDNode(tokens);
-        currToken = tokens.getFirst();
+        currToken = tokens.get(0);
         if (currToken.getTokenType() != TokenType.L_BRACKET) {
             throw new SyntaxException("Should be a left bracket", currToken.getFilename(), currToken.getLineNum());
         }
-        tokens.removeFirst();
+        tokens.remove(0);
         Params paramsNode = Params.parseParamsNode(tokens);
-        currToken = tokens.getFirst();
+        currToken = tokens.get(0);
         if (currToken.getTokenType() != TokenType.R_BRACKET) {
             throw new SyntaxException("Should be a right bracket", currToken.getFilename(), currToken.getLineNum());
         }
-        tokens.removeFirst();
+        tokens.remove(0);
         return new FuncCall(idNode, paramsNode);
     }
 
