@@ -15,18 +15,18 @@ public class Params implements JottTree {
 
     static Params parseParams(ArrayList<Token> tokens) throws SyntaxException {
         if (tokens.isEmpty()) {
-            throw new SyntaxException("Unexpected eof");
+            throw new SyntaxException("Unexpected EOF", "", -1);
         }
-        Token currToken = tokens.getFirst();
+        Token currToken = tokens.get(0);
         if (currToken.getTokenType() == TokenType.R_BRACKET) { //if epsilon
             return new Params(null, null);
         } else { //if <expr><params_t>*...
             Expr exprNode = Expr.parseExpr(tokens);
             ArrayList<ParamsT> paramsTNodes = new ArrayList<>();
-            currToken = tokens.getFirst();
+            currToken = tokens.get(0);
             while (currToken.getTokenType() == TokenType.COMMA) {
                 paramsTNodes.add(ParamsT.parseParamsT(tokens));
-                currToken = tokens.getFirst();
+                currToken = tokens.get(0);
             }
             return new Params(exprNode, paramsTNodes);
         }
